package com.oraclejavabot.features.tasks.service;

import com.oraclejavabot.features.projects.model.ProjectEntity;
import com.oraclejavabot.features.projects.repository.ProjectRepository;
import com.oraclejavabot.features.tasks.dto.TaskUserDTO;
import com.oraclejavabot.features.tasks.model.TaskEntity;
import com.oraclejavabot.features.tasks.model.TaskUserEntity;
import com.oraclejavabot.features.tasks.model.TaskUserId;
import com.oraclejavabot.features.tasks.repository.TaskRepository;
import com.oraclejavabot.features.tasks.repository.TaskUserRepository;
import com.oraclejavabot.features.users.repository.UserRepository;
import com.oraclejavabot.features.taskpriorities.repository.PriorityRepository; // 🔥 NUEVO
import com.oraclejavabot.messaging.producer.TaskEventProducer;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.stereotype.Service;

import java.util.List;
import java.util.UUID;
import java.util.stream.Collectors;

import com.oraclejavabot.features.tasks.dto.TaskAssignmentDTO;
import java.math.BigDecimal;

@Service
public class TaskUserService {

    private static final Logger logger = LoggerFactory.getLogger(TaskUserService.class);

    private final TaskUserRepository taskUserRepository;
    private final TaskRepository taskRepository;
    private final ProjectRepository projectRepository;
    private final UserRepository userRepository;
    private final PriorityRepository priorityRepository; // 🔥 NUEVO
    private final TaskEventProducer taskEventProducer;

    public TaskUserService(TaskUserRepository taskUserRepository,
                           TaskRepository taskRepository,
                           ProjectRepository projectRepository,
                           UserRepository userRepository,
                           PriorityRepository priorityRepository, // 🔥 NUEVO
                           TaskEventProducer taskEventProducer) {

        this.taskUserRepository = taskUserRepository;
        this.taskRepository = taskRepository;
        this.projectRepository = projectRepository;
        this.userRepository = userRepository;
        this.priorityRepository = priorityRepository; // 🔥 NUEVO
        this.taskEventProducer = taskEventProducer;
    }

    // =============================
    // GET USERS BY TASK
    // =============================
    public List<TaskUserDTO> getUsersByTask(String taskId) {
        return taskUserRepository.findByIdTaskId(hexToUuid(taskId))
                .stream()
                .map(this::mapToDTO)
                .collect(Collectors.toList());
    }

    private TaskUserDTO mapToDTO(TaskUserEntity entity) {
        TaskUserDTO dto = new TaskUserDTO();

        UUID userId = entity.getId().getUserId();

        dto.setTaskId(uuidToHex(entity.getId().getTaskId()));
        dto.setUserId(uuidToHex(userId));

        userRepository.findById(userId)
                .ifPresentOrElse(
                        user -> dto.setNombre(user.getPrimerNombre() + " " + user.getApellido()),
                        () -> dto.setNombre("—")
                );

        return dto;
    }

    // =============================
    // ASSIGN USER TO TASK
    // =============================
    public void assignUser(String taskId, String userId) {

        logger.info("Assign user to task requested. taskId={}, userId={}", taskId, userId);

        TaskEntity task = taskRepository.findById(hexToUuid(taskId))
                .orElseThrow(() -> new IllegalArgumentException("Task not found"));

        UUID userUUID = hexToUuid(userId);

        ProjectEntity project = projectRepository.findById(task.getProjectId())
                .orElseThrow(() -> new IllegalArgumentException("Project not found"));

        int exists = projectRepository.existsUserInProjectTeam(
                uuidToHex(task.getProjectId()),
                userId
        );

        if (exists == 0) {
            throw new IllegalArgumentException("User does not belong to the project's team");
        }

        TaskUserId id = new TaskUserId(userUUID, task.getTaskId());

        if (taskUserRepository.existsById(id)) {
            throw new IllegalArgumentException("User already assigned to task");
        }

        TaskUserEntity entity = new TaskUserEntity(id);
        taskUserRepository.save(entity);

        logger.info("User assignment persisted successfully. taskId={}, userId={}", taskId, userId);

        // =============================
        // 🔥 EVENT ENRICHMENT
        // =============================

        String taskTitle = task.getTitulo();
        String projectName = project.getNombre();

        // 🔥 PRIORIDAD DESDE DB (FIX REAL)
        String priority = priorityRepository.findById(task.getPrioridadId())
                .map(p -> p.getNombre())
                .orElse("Unknown");

        // 🔹 Fecha límite
        String dueDate = (task.getFechaLimite() != null)
                ? task.getFechaLimite().toString()
                : "No due date";

        taskEventProducer.sendUserAssignedEvent(
                taskId,
                userId,
                taskTitle,
                projectName,
                priority,
                dueDate
        );

        logger.info("Kafka event sent for assignment. taskId={}, userId={}", taskId, userId);
    }

    // =============================
    // REMOVE USER
    // =============================
    public void removeUser(String taskId, String userId) {

        TaskUserId id = new TaskUserId(hexToUuid(userId), hexToUuid(taskId));

        if (!taskUserRepository.existsById(id)) {
            throw new IllegalArgumentException("User not assigned to task");
        }

        taskUserRepository.deleteById(id);

        logger.info("User removed from task. taskId={}, userId={}", taskId, userId);
    }

    // =============================
    // UTILS
    // =============================
    private UUID hexToUuid(String hex) {
        return UUID.fromString(
                hex.replaceFirst(
                        "(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})",
                        "$1-$2-$3-$4-$5"
                )
        );
    }

    private String uuidToHex(UUID uuid) {
        return uuid.toString().replace("-", "").toUpperCase();
    }


    // =============================
        // GET TASKS BY DEVELOPERS AND SPRINTS
        // =============================
        public List<TaskAssignmentDTO> getTasksByDevelopersAndSprints(
                List<String> developerIds,
                List<String> sprintIds
        ) {
        if (developerIds == null || developerIds.isEmpty()) {
                throw new IllegalArgumentException("developerIds is required");
        }

        if (sprintIds == null || sprintIds.isEmpty()) {
                throw new IllegalArgumentException("sprintIds is required");
        }

        List<UUID> developerUUIDs = developerIds.stream()
                .map(this::hexToUuid)
                .collect(Collectors.toList());

        List<UUID> sprintUUIDs = sprintIds.stream()
                .map(this::hexToUuid)
                .collect(Collectors.toList());

        return taskUserRepository
                .findAssignmentsByDevelopersAndSprintsRaw(developerUUIDs, sprintUUIDs)
                .stream()
                .map(this::mapAssignmentRowToDTO)
                .collect(Collectors.toList());
        }

        private TaskAssignmentDTO mapAssignmentRowToDTO(Object[] row) {
        return new TaskAssignmentDTO(
                (String) row[0],
                (String) row[1],
                (String) row[2],
                (String) row[3],
                (String) row[4],
                toDouble(row[5]),
                toDouble(row[6]),
                toInteger(row[7]),
                toInteger(row[8])
        );
        }

        private Double toDouble(Object value) {
        if (value == null) {
                return null;
        }

        if (value instanceof BigDecimal bigDecimal) {
                return bigDecimal.doubleValue();
        }

        if (value instanceof Number number) {
                return number.doubleValue();
        }

        return Double.valueOf(value.toString());
        }

        private Integer toInteger(Object value) {
        if (value == null) {
                return null;
        }

        if (value instanceof BigDecimal bigDecimal) {
                return bigDecimal.intValue();
        }

        if (value instanceof Number number) {
                return number.intValue();
        }

        return Integer.valueOf(value.toString());
        }
}